--- a/package.json
+++ b/package.json
@@ -4,12 +4,20 @@
   "description": "Módulo DDD do treinamento fullcycle 3.0",
   "main": "index.js",
   "dependencies": {
-    "typescript": "^4.6.2",
-    "tslint": "^6.1.3"
+    "tslint": "^6.1.3",
+    "typescript": "^4.6.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@swc/cli": "^0.1.57",
+    "@swc/core": "^1.2.161",
+    "@swc/jest": "^0.2.20",
+    "@types/jest": "^27.4.1",
+    "jest": "^27.5.1",
+    "ts-node": "^10.7.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run tsc -- --noEmit && jest",
+    "tsc": "tsc"
   },
   "repository": {
     "type": "git",
